# co2-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
src/: main.py  schemas.py
