[tool.poetry]
name = "co2-api"
version = "0.1.0"
description = ""
authors = ["Joe Joiner <2454320+joejoinerr@users.noreply.github.com>"]
readme = "README.md"
#packages = [{include = "co2_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
